added movie routes and API documentation
